image size in commission page also fixed and the alignment issue fixed in this page

--- a/src/components/CardContainer.css
+++ b/src/components/CardContainer.css
@@ -11,7 +11,6 @@
 /* Card */
 .card {
   background-color: #fff;
-
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   width: 592px;
@@ -25,16 +24,38 @@
 }
 
 .card-images {
-  display: flex; /* Arrange images in a row */
-  justify-content: space-between;
+  display: flex;
   gap: 5px;
-  overflow-x: auto; /* Allow horizontal scrolling if images overflow */
+  height: 360px; /* Set the height of the image section */
+}
+
+.column-half {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.column-full {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  height: 366px;
 }
 
 .card-image {
-  width: calc(33.33% - 5px); /* Adjust width for three images */
-  height: 150px; /* Adjust height as needed */
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  cursor: pointer;
+}
+
+.card-image-half {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .card-content {
@@ -82,12 +103,14 @@
   width: 45px;
   margin: 5px;
 }
+
 /* Title and Description */
 .title-description {
   flex: 1; /* Take up remaining space */
   justify-content: space-between;
   margin-left: 20px;
 }
+
 .card-link {
   text-decoration: none;
 }
